--- a/views/words.erb
+++ b/views/words.erb
@@ -19,4 +19,4 @@
 <p>Currently, there aren't any words..</p>
 <% end %>
 
-<a href="/albums/new">Add a new word!</a>
+<a href="/words/new">Add a new word!</a>
