--- a/views/word.erb
+++ b/views/word.erb
@@ -14,9 +14,9 @@
 
 <h4>Add a definition:</h4>
 
-<form action="/words/<%= @album.id %>/definitions" method="post">
+<form action="/words/<%= @word.id %>/definitions" method="post">
   <div class="form-group">
-    <label for="definition_name">Song name</label>
+    <label for="definition_name">Definition</label>
     <input id="definition_name" name="definition_name" class="form-control" type="text">
   </div>
   <button type="submit" class="btn">Add a definition to a word</button>
@@ -24,5 +24,5 @@
 
 
 
-<p><a href="/albums/<%= @album.id %>/edit">Edit Word</a></p>
-<p><a href="/albums">Return to word list</a></p>
+<p><a href="/word/<%= @word.id %>/edit">Edit Word</a></p>
+<p><a href="/word">Return to word list</a></p>
