--- a/views/words.erb
+++ b/views/words.erb
@@ -12,7 +12,7 @@
 <% if @words.any? %>
 <ul>
   <% @words.each do |word| %>
-  <li><a href="/words/<%= word.id %>"><%= word.name %> <%= word.id %></a></li>
+  <li><a href="/words/<%= word.id %>"><%= word.name %></a></li>
   <% end %>
 </ul>
 <% else %>
