--- a/views/definition.erb
+++ b/views/definition.erb
@@ -16,4 +16,4 @@
   <button type="submit">Remove a definition</button>
 </form>
 
-<a href="/albums/<%= @definition.word.id %>">Back to <%= @definition.word.name %></a>
+<a href="/words/<%= @definition.word.id %>">Back to <%= @definition.word.name %></a>
