--- a/views/word.erb
+++ b/views/word.erb
@@ -24,5 +24,5 @@
 
 
 
-<p><a href="/word/<%= @word.id %>/edit">Edit Word</a></p>
-<p><a href="/word">Return to word list</a></p>
+<p><a href="/words/<%= @word.id %>/edit">Edit Word</a></p>
+<p><a href="/words">Return to word list</a></p>
