--- a/views/edit_word.erb
+++ b/views/edit_word.erb
@@ -3,10 +3,10 @@
 <form action="/words/<%= @word.id() %>" method="post">
   <input name="_method" type="hidden" value="patch">
 
-  <label for="name">Rename word</label>
-  <input id="name" name="name" type="text">
+  <label for="name">Rename word to:</label>
+  <input id="name" name="name" type="text"><br>
 
-  <button type="submit">Update word to match the definition</button>
+  <button type="submit">Update word while keeping the same definition</button><br>
 
 </form>
 
